<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/class_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dimen_8_dp"
        app:cardBackgroundColor="@android:color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/class_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_8_dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/class_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_sample_name"
                android:textSize="@dimen/dimen_24_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/class_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:text="@string/class_sample_title"
                android:textSize="@dimen/dimen_20_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/class_name_text_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/class_title_description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4_dp"
                android:text="@string/class_sample_description"
                android:textSize="@dimen/dimen_20_sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/class_title_text_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/class_taken_on_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:text="@string/class_taken_on_title"
                android:textSize="@dimen/dimen_16_sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/class_title_description_text_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/class_taken_on_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4_dp"
                android:text="@string/class_taken_on_sample"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/dimen_20_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/class_taken_on_title_text_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/class_taken_by_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:text="@string/class_taken_by_title"
                android:textSize="@dimen/dimen_16_sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/class_taken_on_date_text_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/class_taken_by_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4_dp"
                android:text="@string/class_taken_by_name_sample"
                android:textSize="@dimen/dimen_20_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/class_taken_by_title_text_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>